--- a/Jot20190105.md
+++ b/Jot20190105.md
@@ -5,3 +5,5 @@ Need to bear the following in mind.[@whitfield2000]:
 -- autocomplete.bibtex works on .md files.
 
 -- Git Hub sometimes does not register changes. Not sure why. Close pane and then control-shift-9
+
+Important to work with notes and projects properly.[@]
