Comments on autocomplete.bibtex

--- a/Jot20190105.md
+++ b/Jot20190105.md
@@ -2,8 +2,8 @@ Running on empty
 
 Need to bear the following in mind.[@whitfield2000]:
 
--- autocomplete.bibtex works on .md files.
+-- autocomplete.bibtex works on .md files. But has problems setting up after closing.
 
 -- Git Hub sometimes does not register changes. Not sure why. Close pane and then control-shift-9
 
-Important to work with notes and projects properly.[@]
+Important to work with notes and projects properly.
