--- a/Jot20190105.md
+++ b/Jot20190105.md
@@ -6,4 +6,4 @@ Need to bear the following in mind.[@whitfield2000]:
 
 -- Git Hub sometimes does not register changes. Not sure why. Close pane and then control-shift-9
 
-Important to work with notes and projects properly.
+Important to work with notes and projects properly.[@wilmer2008, p. 16]
