--- a/Jot20190105.md
+++ b/Jot20190105.md
@@ -1,8 +1,15 @@
+---
+title: Running on empty
+author: Daniel H. Borus
+bibliography: /Users/dborus/Desktop/Sources.json
+csl: chicago-fullnote-bibliography-with-ibid.csl
+
+---
 Running on empty
 
 Need to bear the following in mind.[@whitfield2000]:
 
--- autocomplete.bibtex works on .md files. But has problems setting up after closing.
+-- autocomplete.bibtex works on .md files. But has problems setting up after closing. Not sure particularly how to fix.[@whitfield2000]
 
 -- Git Hub sometimes does not register changes. Not sure why. Close pane and then control-shift-9
 
