Comments and Additions

--- a/4.md
+++ b/4.md
@@ -52,21 +52,32 @@ Although revisionists accepted Freud’s notion of a depth psychology in which u
 
 With its emphasis on social context rather than biologically-based drives, revisionism opened the possibility of connecting psychological development to political change. Most notable in this regard was Erich Fromm, who discerned commonalities between Freud and Marx. “Different as they were, they have in common an uncompromising will to liberate man, an equally uncompromising faith in truth as the instrument of liberation and the belief that the condition for this liberation lies in man's capacity to break the chain of illusion.”[^21] In Fromm’s synthesis, dynamic psychology provided the mechanism by which social existence gave rise to consciousness while historical materialism contributed an etiology to why certain character types predominated at different times in human history. Fromm believed libidinal theory was of limited value in explaining why a particular social class featured a particular character type. It was unlikely, he thought, that every petit bourgeois had anal fixations. If the human instinctual apparatus was not infinitely malleable, it nonetheless changed in response to the historical problems it faced. Fromm’s revisionism was most apparent in his view of the family as the conduit of historical context through the particular bodily and psychic gratification structure. As long as it bestowed the proper rewards, the family would give rise to the typical character type. Should families cease to deliver rewards, the stage was set for new character types and social change.[^22]
 If Fromm jettisoned orthodoxy for radical ends, others hewed to it for similar reasons. Although the analytic establishment used Freud to secure patient adjustment to normal social life, thinkers diverse as Herbert Marcuse, Lionel Trilling, and the sociologist Dennis Wrong glimpsed in Freudian libido theory the possibility of true opposition to the political and social status quo. They held that the drives did _not_ set the self forever but opened possibilities for overturning social convention. Revisionists had treated nature as a form of determinism, but their work relied on what Wrong termed the oversocialized conception of man (sic). By positing social and cultural causation activated by an ingrained need for approval, revisionism turned out at bottom to be a theory of conformity in which rebels were incompletely socialized. Freud himself was dismissive of social revolution, but his conception of the self caught between drive and internalized social restriction was a portrait of a person in struggle. Aware that the manifestation of instincts was not fixed, defenders of the libido theory envisioned ways that redirected instincts could aid nonconformist ends. For the literary critic Trilling, the biological substratum remained beyond conformity to culture. For the philosopher Marcuse, the unleashing of eros was an attack on capitalist society’s conversion of sex energy into alienated labor. “The irreconcilable conflict is not between work (reality principle) and Eros (pleasure principle), but between alienated labour (performance principle) and Eros,” Marcuse proclaimed.[^23] In their desire to separate themselves from what they regarded as the conformist tendencies of neo-Freudianism, both Marcuse and Trilling flirted with positions that made bodily pleasure the sole measure of meaningful selfhood, underplaying the contributions of Enlightenment reason. A fear that American culture might co-opt the supposedly liberated aspects of instinctual life later led Marcuse to advance the idea of repressive desublimation in _One-Dimensional Man_ (1964).[^24]
+
 Although most debate revolved around how the body determined identity, there were instances where self and body became unconnected and revealed how plastic gender behavior could be. Some were played for fun, as in Billy Wilder’s film _Some Like It Hot_ (1959), in which Jack Lemmon and Tony Curtis dress and live as women to escape gangsters. Others, such as the case of Christine Jorgensen went to the heart of body and identity. Although born with a penis, George William Jorgensen felt early on as a child that she was a woman trapped in a man’s body. Although psychoanalysts regarded such a condition as a mental illness, the result of improper identification with the properly sexed parent during early childhood, medical doctors regarded the condition as inadequate physical development of the proper sexual characteristics. Beginning hormone therapy with the husband of a classmate, Jorgensen traveled to Europe to have sex reassignment surgery which she completed in Denmark in 1951 and 1952. Jorgensen became an instant celebrity upon her return to the United States. Often an object of derisive humor, Jorgensen responded by adopting a glamorous and outgoing persona, quite different from her diffidence as a boy. Forbidden from marrying (her birth certificate indicated she was male), she nonetheless by her very existence demonstrated that gender was not a binary, incommensurate condition and that genitalia and chromosomes alone did not provide a completely solid foundation for identity.[^25]
 
 **The Crowd and the Lonely**
 
 For a people who proclaimed their devotion to individualism, midcentury Americans were inveterate joiners. Such organizations as the Boy Scouts, Parent-Teachers Association and the League of Women Voters experienced tremendous growth from 1950 to 1960, virtually doubling during the period. Socializing was central to commercial ventures as well. The much-derided Tupperware---plastic covered dishes intended to store leftovers ---was founded in 1948 and rose to cultural prominence and lucrative returns on the strength of its marketing through “Tupperware parties” of friends and neighbors. As commentators puzzled out the meaning of American joining, they ultimately confronted the question of whether society was too much or too little present in the formation of the integrated self. On the one hand, social critics created a cottage industry in the criticism of American conformity, singling out suburbia and corporate bureaucracies as the prime offenders. Such social pressure, they maintained, interfered with the development of a true self and left the individual at the mercy of others. Others worried that social bonds were too thin and too superficial to support the needs of human development. Cut adrift, dependent on their own meager resources, and bereft of meaningful interaction, Americans were bound to be stunted, myopic and narcissistic.[^26]
+
 Although there is very little discussion of loneliness as the term is usually understood, David Riesman’s _Lonely Crowd_ (1950) takes as its central problem the changing relationship of the self and others. Riesman developed an interest in sociology during his analysis with Erich Fromm. Originally, he and his associates Reuel Denney and Nathan Glazer set out to study apathy during the 1948 presidential election; the project morphed into a study of which abstract character type predominated at a given stage of the past. Where once the prevailing personality type was inner-directed, transformation in social organization --- particularly the rise of bureaucracy and mass communications --- gave rise to the other-directed type. Inner-directeds, as the name suggests, subscribed to values and followed a code of behavior she or he has internalized. In contrast, other-directed people took their cues from social expectations and the reactions of their fellows. Inner-directed folks gained identity primarily from work; outer-directeds organized their self-conception around leisure and consumption. The other directed was a life filled with anxiety, as opposed to the inner-directed’s guilt.
+
 Many readers interpreted Riesman’s book as deploring the rise of the other-directed personality, which they saw as conformist, insecure, and dependent. Riesman rightly denied he was simply lamenting the decline of nineteenth-century individualism or criticizing conformity as such. Riesman was clear that the issue was _how_, not whether, a society induces conformity. Nineteenth-century America did so through a similar internal code that resulted in envy and emulation among inner-directed strivers. The other-directed, he noted, conformed from an “greater resonance with others, a heightened self-consciousness about relations to people, and a widening of the circle with whom one wants to feel in touch.” Nor did he think the inner-directed personality was particularly admirable, pointing to its crabbed, constricted and parochial nature. The inner-directed man may have had his internal code, but the circle of others who were acceptable was quite small and his inner censor could be unproductively unforgiving. Inner direction may have suited the class-conflict ridden stage of capitalism but was hardly the model for personal freedom in the modern age.[^27]
+
 Riesman hardly depicted the other-directed as models of meaningful and self-aware selfhood. Other-direction enabled insincere glad-handing and mood engineering designed to influence vaguely discomforted individuals uncertain about whether or not they fit in. As a type, the other-directed personality resembled Fromm’s marketing personality, who treated his self as if it were a commodity. Drawing identity from consumption rather than work, other-directeds were especially vulnerable to swings in fashion. Like Arthur Miller’s Willie Loman in _Death of a Salesman _(1949), other-directeds were often convinced they had “sterling traits of character” and “a pleasing personality” and often found it difficult to face reality. Yet Riesman envisioned positive aspects to other-direction as well. Aware of others, the other-directed self was more empathetic, sensitive, tolerant, and flexible. Riesman contended that the other-directed was more prone to examining inner life and better suited to a world in which work had been so degraded that it could no longer contribute to a worthwhile identity. An emerging orientation, the other-directed heralded either a new openness or a therapeutic world view in which attention to one’s feelings trumped all other considerations.
+
 The most tantalizing but least realized portion of the book was Riesman’s discussion of autonomy. Now that the problem of production had been virtually solved, Riesman argued, freedom was a psychosocial problem rather than a material one. Although Riesman had noted in a letter to Denney the possibility that in some circumstances alienation could be a legitimate response to a society that bore down too heavily on individuals, he ultimately tended to regard the condition as anomie, the breakdown of social connection and norms. More preferable was autonomy, which he conceded was relatively rare, especially in a regime of outer-direction. He envisioned autonomy achieved through membership in multiple communities, creative consumption by which he meant knowledgeable use of an item, and the ability to know and master one’s own desires. The details remained relatively sketchy in Riesman’s account but his remained an effort to discover a creativity amidst what he conceded was general joylessness. That led Daniel Bell to label him a prophet of play who overemphasized the degree to which consumption yielded the kind of freedom that Riesman wanted. Indeed, by the late 1960s, Riesman worried that efforts to go one’s own way had become willful efforts to depart from norms for their own sake, as if eccentricity proved one was not other-directed.
+
 Others were less subtle than Riesman. The cover for _Time Magazine_’s 1954 story on Riesman featured a man in a business suit with a radar transmitter on his back looking to the future and the Victorian figure with a compass moving back into the mists of the past while the masses behind the bespectacled Riesman remain faceless. Riesman’s work sparked related popular ventures, particularly the social criticism of Vance Packard and William H. Whyte. Both were deeply critical of institutional exploitation of fears of being different, a tendency they saw as a defining feature of modern bureaucratic life. Whyte and Packard regarded the corporation as the nerve-center of a collectivist culture that evoked insecurities, nudging America toward Tocqueville-like state of conformity in which ostensibly free individuals feared any difference with their fellows. Keeping up with the Joneses was not simply a striving to be included or to improve one’s material well being, but a central component of the American good life. Whyte contended that it came with a new consciousness for the modern age, “groupthink,” the conscious justification for conformity on the grounds that group wisdom was superior to that of individuals. With “groupthink” came personality transformation. Americans had become so afraid of the rejection occasioned by being different that conformity took hold beyond the office to the homes of corporate drones in the suburbs. It was a view echoed in Malvina Reynolds’s song about “Little Boxes” made of “ticky-tacky” and Betty Friedan’s portrait of the suburban housewife as living in a comfortable concentration camp and deeply unfulfilled. Packard’s criticism was directed at institutions of manipulation and standardization, such as advertising, product design, and public relations. Although resonating throughout the culture, Packard and Whyte’s broadsides proved overstated --- the suburbs, including the supposed epitome of conformity, Levittown, were much less conformist than they claimed. Nor could they offer any meaningful way to oppose conformity. The best alternative that Whyte could offer was an appendix on cheating on personality tests.[^28]
+
 Whyte and Packard’s lament for the autonomous self who resisted social pressure was echoed in the popular film genre that enjoyed something of a heyday in midcentury, the Western. The typical 1950s Western probed the social and cultural conflict that arose when rugged individualism lost its social utility. At odds with the direction of history, Western heroes constantly drift or die. Despite their ostensible celebration of their protagonist’s resistance to social demands, midcentury Westerns have an elegiac feel. Heroic bold action ends with complete alienation from the community. John Wayne’s Tom in Howard Hawks’s _Red River_ (1948) is a rugged individualist par excellence who demands others bend to his will. He regards others’ needs as a personal attack and treats compromise as weakness. During a crucial cattle drive, his violent and inhumane behavior boils over in a mutiny led by his adopted son, Montgomery Clift’s Matt, whom in a reversal of the Oedipal drama Tom vows to kill. In the case of _Shane_ (1953), the titular character is caught between his gunslinging nature and his desire to put his past away. When a cattle baron and his henchmen attempt to engross the fertile land of the valley, threatening the farm family where Shane works and boards, he abandons his pledge, killing the treacherous baron and his hired guns in a showdown. Though the young boy who idolizes him wants Shane to “come back,” Shane intuitively understands the impossibility of a self like his living peaceably with others, even as his skills constitute a precondition for society. In _High Noon_ (1952) the incompatibility lies in the unprincipled conformity of those who compose respectful society. Hearing that a criminal, whom he had put away in jail was returning to exact his revenge, sheriff Will Kane (Gary Cooper) feels it incumbent to stand his ground, even though he was about to leave for the East with his new bride. Efforts to recruit help are unavailing and Kane faces the onslaught alone (with the help of his Quaker wife). Often taken as an allegory for Hollywood cravenness in the face of HUAC threats, the film earned praise for Kane’s doing what was right when others would not. Interestingly, Hawks and Wayne could not abide the film on grounds that the townsfolk were cowards and Kane was weak for asking for help and for ultimately being saved by his wife. Ronald Reagan, on the other hand, loved the film.[^29]
+
 Placing the western in the present day only exacerbated the incongruity of the autonomous hero. In _Lonely Are the Brave_ (1962), written by the once-blacklisted Dalton Trumbo from eco-anarchist Edward Abbey’s novel _The Brave Cowboy_, loner Jack Burns (Kirk Douglas) proves unable to function in modernity. The film drives the point home from the beginning where Burns at home on the range is discombobulated by screaming jets, gear-shifting trucks that make highway crossings on a horse nearly impossible, and barbed-wire fences that block free passage. Burns makes to trek from the New Mexico mountains to free his friend Paul, who has been jailed for smuggling Mexican refugees into the country. Once in town, Burns sets out to get arrested so he can break Paul out of jail with hacksaw blades he has smuggled into the prison. When family man Paul decides the costs of jail break are greater than doing the time, Burns escapes by himself. Chased by the forces of law and order with its radios and helicopters up the Sandia Mountains, Burns temporarily manages to evade capture, even shooting down a copter. Yet in the midst of trying to cross a highway, his horse once again spooks and Burns is hit by a truck carrying, in an excess of symbolism, a load of toilets.
 Douglas secured the rights and hired Trumbo to tell a story about the near impossibility of maintaining authentic individuality in a mass society bent on classifying and regulating its citizens. Burns has no ID cards because he knows who he is. He rejects fences and no trespassing signs because they represent society’s encroachment on his freedom. Director David Miller reinforced the point visually by showing the mountains and deserts of New Mexico in panoramic shots that emphasized the openness and freedom of nature and shooting the machinery and enclosed rooms of civilized society in claustrophobic closeups. In the end, of course, modern civilization would prove triumphant and doom folks like Burns. Yet Trumbo punctuated the requiem for the independent self with a caveat. Burns tells Jerry, Paul’s wife, with whom he was once in love that he was unfit for marriage, “Know what a loner is? He's a born cripple. He's a cripple because the only person he can live with is himself. It's his life, the way he wants to live. It's all for him. A guy like that, he'd kill a woman like you. Because he couldn't love you, not the way you are loved.” Such a scene can be read as an equation of solitude with selfishness. It might also be understood as a reaffirmation of gender differences: only men have the wherewithal to live as they want to live.
+
 Another, less conventional, version of authentic individuality arrived via the Beats, the best-known midcentury bohemians. Convinced that conventional American life demanded sterile routines that denied individuals genuine freedom, the motley collection of writers, poets, and artists stridently asserted their rejection of social norms that repressed impulses, outlawed meaningful experience, and demanded standardization of thought, feeling, and action. In reaction to a society that was overly sentimental and inauthentic, Beats adopted an attitude of cool, a reserved distance from convention. In contrast to middle-class norms of restraint and caution, Beats favored spontaneity. In protest of the mainstream insistence on propriety, Beats embraced the margins of society, seeking out the company of criminals, drugs addicts, deviants, and denigrated minorities. It was this spirt that Jack Kerouac expressed when the narrator of his 1957 novel, _On the Road_, Sal Paradise, declared “the only people for me are the mad ones, the ones who are mad to live, mad to talk, mad to be saved, desirous of everything at the same time, the ones that never yawn or say a commonplace thing, but burn, burn, burn” and celebrated the black community of Denver because “the best the white world had offered was not enough ecstasy for me, not enough life, joy, kicks, darkness, music, not enough night.”[^30]
-Most unsympathetic commentators regarded Beats as conformist in their nonconformity and engaged in a juvenile reaction against adulthood. Writing in the _Partisan_ Review, Norman Podhoretz lambasted their worship of primitive energy: “The plain truth is that the primitivism of the Beat Generation serves first of all as a cover for an anti-intellectualism so bitter that it makes the ordinary American’s hatred of eggheads seem positively benign.”[^31] Others saw racial stereotyping in the guise of admiration and a disregard for women’s contributions. Yet Beats were more than nay-saying hedonists. They overestimated the freedom they had achieved, but their quest to embrace experiences mainstream American frowned upon entailed a project of constructing a self unfettered by social boundaries whatsoever. As their embrace of madness indicates, the Beats regarded sanity as encasing and restricting the self. Drawing an eclectic mix of philosophical elements ranging from Eastern religion to the mysticism of William Blake, the Beats were even ready to jettison the self altogether as an illusion. The Beat self, William Burroughs observed needed to learn “to exist with no religion, no country, no allies” and “to live alone in silence.” Coming from a left-wing Jewish family, Allen Ginsberg could condemn in “America” (1956), a United States that committed crimes against Tom Mooney, Spanish Loyalists, and Scottsboro Boys and that sported such cultural monstrosities as television, _Time_ magazine, and Henry Ford. Yet his resistance to the prison of centered selfhood enabled him to make common cause with the libertarian Burroughs and the Catholic anti-Communist Kerouac.[^32]
+
+Most unsympathetic commentators regarded Beats as conformist in their nonconformity and engaged in a juvenile reaction against adulthood. Writing in the _Partisan Review_, Norman Podhoretz lambasted their worship of primitive energy: “The plain truth is that the primitivism of the Beat Generation serves first of all as a cover for an anti-intellectualism so bitter that it makes the ordinary American’s hatred of eggheads seem positively benign.”[^31] Others saw racial stereotyping in the guise of admiration and a disregard for women’s contributions. Yet Beats were more than nay-saying hedonists. They overestimated the freedom they had achieved, but their quest to embrace experiences mainstream American frowned upon entailed a project of constructing a self unfettered by social boundaries whatsoever. As their embrace of madness indicates, the Beats regarded sanity as encasing and restricting the self. Drawing an eclectic mix of philosophical elements ranging from Eastern religion to the mysticism of William Blake, the Beats were even ready to jettison the self altogether as an illusion. The Beat self, William Burroughs observed needed to learn “to exist with no religion, no country, no allies” and “to live alone in silence.” Coming from a left-wing Jewish family, Allen Ginsberg could condemn in “America” (1956), a United States that committed crimes against Tom Mooney, Spanish Loyalists, and Scottsboro Boys and that sported such cultural monstrosities as television, _Time_ magazine, and Henry Ford. Yet his resistance to the prison of centered selfhood enabled him to make common cause with the libertarian Burroughs and the Catholic anti-Communist Kerouac.[^32]
+
 Beat spontaneity did not result in a consistent philosophy. More philosophically sophisticated in its consideration of the meaning and dilemmas of identity was existentialism. Although as historian George Cotkin has argued several strains of American thought had existential themes, the philosophy did not take hold until European versions arrived in mid-twentieth century. The thought of Soren Kierkegaard, introduced through the efforts of neo-Orthodox Episcopal minister, Walter Lowrie, led figures as diverse as Reinhold Niebuhr, Will Herberg, Whitaker Chambers, and Arthur Schlesinger, Junior to temper or reject their one-time expansive hopes for social transformation. Existentialism gathered steam with the New York intellectuals’ discovery and promotion of the French writers, Jean-Paul Sartre, Simone de Beauvoir and Albert Camus in the mid-1940s, but all three had unsatisfactory visits to United States. Their hosts criticized the existentialists for their flirtation with Marxism (Camus being an exception), shallow knowledge of Freud, and mass-media posturing. Nonetheless existentialism remained attractive as a philosophy of authenticity that enjoined individuals not to accept fate but instead create their identities as singular, unique beings. More than the pose of Greenwich Village coffeehouse habitués, existentialism proved a bracing challenge and support for those searching for an understanding of where they stood in the world. One sign of its success was the appearance of such academic efforts to provide meaningful genealogies and commentary as Hazel Barnes’s _The Literature of Possibility_ (1957) and Walter Kaufmann’s _Existentialism From Dostoevsky to Sartre_ (1956). By the mid-1960s, existentialism had profoundly affected the novelists Anne Rice and Marge Piercy, the feminist Roxanne Dunbar-Ortiz, and radicals Tom Hayden and Robert Moses, and, ironically, given their opposing sexual politics, Betty Friedan and Norman Mailer.[^33]
 Existentialism defined the human condition as strikingly individual. Though humans live in groups, our consciousness and our death were ours alone. Where determinisms wrongly subsumed particulars under abstract and ultimately meaningless concepts, existentialism was concerned with recognizing contingencies and making rather than discovering truth. At the core of things was the necessity of human choice. It was the inescapability of making choices and creating an identity that gave meaning to the famous Sartrean aphorism that existence precedes essence. Many of those choices were crucial ones that could not be fudged and committed one to a particular course, “either/or” in the parlance rather than “both/and.” Even though the world was absurd in the sense that meaning was not given, having to make a choice conferred a seriousness to life and required individuals to assume responsibility for whom one was and whom one became. One could not evade the responsibility of choice even if one occupied a lowly social position or suffered through oppressive conditions, a point Camus advanced in his “Myth of Sisyphus.” Condemned to the absurdity of forever pushing a boulder up a mountain, Sisyphus nonetheless differed from the inhuman boulder because he retained the ability to deny fate and make deliberate choices about what he would do. Sartre labeled bad faith any denial of responsibility for one’s situation. It was inauthentic to simply shrug one’s shoulders and assert this is just the way I am. Borrowing from phenomenological discussion of consciousness, Sartre asserted resignation denied our awareness, however dim and distant, that we are always more than ourselves. Existentialists insisted there was no greater inauthenticity than accepting without passionate engagement and choice social conventions.
 Although Sartre once wrote “hell is other people,” existentialists were wary of blithe libertarianism and the egoism of exclusive self regard. Having condemned the bad faith of acquiescing in a socially-imposed identity, existentialists also challenged the bad faith of pretending antecedent conditions had no effect whatsoever, as if all things were possible. One of those antecedent conditions that the French recognized was society itself. That recognition gave the politics of the existentialists social concerns. For de Beauvoir, authenticity required an open future which extends itself by opening the freedom of others. It also presented Sartre and de Beauvoir with the task of squaring the individual freedom of existentialism expounded in “Existentialism is Humanism” with the social causation of Marxism. Sartre’s effort to weave together collective and individual action in _The Critique of Dialectical Reason_ was at best only partially successful. The liberal Camus regarded the project as utopian politics because it treated class as an abstraction and justified positions on the grounds of historical necessity. Doing so necessarily drained values from political action and substituted revolutionary fervor for regard for others. Concerned to keep means and ends in balance, Camus opted for a reformist politics that accepted in some fashion the positions of others. That stance could founder on the search for an unachievable middle position, as in his untenable hope that the Algerian crisis could be resolved in a compromise that left French nationals in their unique place in the colony while honoring the desire of indigenous Algerians for independence. Camus nonetheless proved tremendously inspiring for Americans eager for a new politics that combined the individual authenticity of social opposition with an acceptance of legitimate social bonds. His influence could be found in such documents of the New Left as _The Port Huron Statement_ and _Liberation_ magazine.
