--- a/4.md
+++ b/4.md
@@ -134,7 +134,7 @@ Notes
 
 [^5]:	On the prominence of psychological discourse, see Alan Petigny, _The Permissive Society: America, 1941-1965 _(New York: Cambridge University Press, 2009), 15-99. _Life _Magazine_ _recognized the new importance of psychology in 1957 with a five-part series. See Ernest Haveman, “Age of Psychology in the U.S.” _Life,_ January 7, 1957, 68-82. Subsequent issues tackled psychological testing, the use of psychology in the workplace, psychoanalyses, and the future of psychology.
 
-[^6]:	The _Life_ discussion of Freud in “The Age of Psychology” series appeared in the January 21, 1957 issue. Particularly rewarding on the influence of Freud after the war is John C. Burnham, _After Freud Left: A Century of Psychoanalysis in America _(Chicago: The University of Chicago Press, 2012), especially part II with essays by Dorothy Ross, Louis Menand, and Jean-Christophe Agnew.
+[^6]:	The _Life_ discussion of Freud in “The Age of Psychology” series appeared in the January 21, 1957 issue. Particularly rewarding on the influence of Freud after the war is John C. Burnham, _After Freud Left: A Century of Psychoanalysis in America _(Chicago: The University of Chicago Press, 2012), especially part II with essays by Dorothy Rossuis Menand, and Jean-Christophe Agnew.
 
 [^7]:	Douglas T. Miller and Marion Nowak, _The Fifties: The Way We Really Were_ (Garden City, N.Y.: Doubleday, 1977); Petigny, _The Permissive Society: America, 1941-1965_, 100-33.
 
