--- a/4.md
+++ b/4.md
@@ -120,7 +120,9 @@ Sinatra skillfully moved in his so-called “down” albums between gloom, resig
 
 The problem of loneliness generated calls for adopting of cheery attitude, joining groups, and, should those fail to alleviate feelings, therapy. The tendency to treat the somber feelings that accompany being alone as a problem led a few writers to assert that not all states of aloneness were detrimental to a meaningful sense of self. Clark Moustakas maintained that reflexive flight from solitude was an effort to avoid inner life and ran the risk of self-alienation and feelings of inferiority. Those “not open enough, flexible enough, expansive enough to attach” themselves “to new personas and find value in new experiences” were frightened to face loneliness. Confronting the sense of absence provoked an “intense and timeless awareness of the Self which allows for new sensitivities and awareness, and which results in bringing a person deeply in touch with his own existence and in touch with others in a fundamental sense.”[^38] Moustakas concentrated on particularly vivid or life-changing experiences such as the sudden and severe illness of children, war injuries, the dread evoked by mountain climbing or exploring the unknown, political trials and tribulations (he mentions both Alger Hiss and Whitaker Chambers) but insisted that courting loneliness will help with quotidian living. The Catholic convert and social activist Dorothy Day experienced the new self that emerged from loneliness as rebirth in religious terms. Solitude enabled her to become aware of the full extent of her sinfulness and realize that true selfhood existed in a religious community involved in the life of others.[^39] Day’s loneliness and Moustakas’ loneliness were not, it should be said, the usual experience of the time.
 
+
 **The Young and the Restless**
+
 
 Few discussions of the Fifties fail to mention the species known as the American teenager, identifiable by its common experience of high school and its own particular culture and behavioral repertoire. As Joseph Kett has demonstrated, before the twentieth century Americans were unaccustomed to thinking of the teen years as a distinct period devoted to experimentation and preparation for adulthood, or to assume that puberty was accompanied by emotional turbulence. The first full articulation of youth as a transitional state suspended between childhood and adulthood was the psychologist G. Stanley Hall’s _Adolescence_ (1904). Hall saw the condition as one of storm and stress, marked by conflict with parents, mood swings and risky behavior. “Youth,” he wrote, “awakes to a new world and understands neither it nor himself.” Hall’s concept was the province of experts until midcentury when the term “teenager” came into general use. It arose primarily to demarcate a group that had enough disposable income to constitute a market segment that marketeers could exploit. With its general use, the concept signified social insecurities and career uncertainties in addition to Hall’s storm and stress. American adolescents were a distinctive breed. According to a famous post-Sputnik _Life_ magazine story, they were the reverse of their Soviet counterparts. Where soviet teenagers were dedicated to their studies and committed to the success of their nation, Americans obsessed over dating, sports, and possession of the latest consumer goods. There were clearly racial and class components to this characterization of teenagers as concerned with fun, fun, fun to the exclusion of all else. The growing visibility of black and Latino and working-class teenagers spurred panic about juvenile delinquency and fears about unformed white youth imitating those examples.[^40]
 
@@ -159,7 +161,7 @@ Notes
 
 [^5]:	On the prominence of psychological discourse, see Alan Petigny, _The Permissive Society: America, 1941-1965 _(New York: Cambridge University Press, 2009), 15-99. _Life _Magazine_ _recognized the new importance of psychology in 1957 with a five-part series. See Ernest Haveman, “Age of Psychology in the U.S.” _Life,_ January 7, 1957, 68-82. Subsequent issues tackled psychological testing, the use of psychology in the workplace, psychoanalyses, and the future of psychology.
 
-[^6]:	The _Life_ discussion of Freud in “The Age of Psychology” series appeared in the January 21, 1957 issue. Particularly rewarding on the influence of Freud after the war is John C. Burnham, _After Freud Left: A Century of Psychoanalysis in America _(Chicago: The University of Chicago Press, 2012), especially part II with essays by Dorothy Rossuis Menand, and Jean-Christophe Agnew.
+[^6]:	The *Life* discussion of Freud in “The Age of Psychology” series appeared in the January 21, 1957 issue. Particularly rewarding on the influence of Freud after the war is John C. Burnham, _After Freud Left: A Century of Psychoanalysis in America _(Chicago: The University of Chicago Press, 2012), especially part II with essays by Dorothy Rossuis Menand, and Jean-Christophe Agnew.
 
 [^7]:	Douglas T. Miller and Marion Nowak, _The Fifties: The Way We Really Were_ (Garden City, N.Y.: Doubleday, 1977); Petigny, _The Permissive Society: America, 1941-1965_, 100-33.
 
