--- a/Notes/Emre2018.md
+++ b/Notes/Emre2018.md
@@ -50,4 +50,6 @@ Inhouse critique: does use thinking, feeling, sensation, and intuition -- Jung's
 
 logical extension of type thinking -- type would stiffen and standardize in its bid for universality. The more rapidly type circulated through knockoff tests the more its descriptions of personalities would reduce to one-word caricatures.[emre2018, p. 259]
 
-promise of slotting into designated niches -- dystopian fiction of rational labor organization. 
+promise of slotting into designated niches -- dystopian fiction of rational labor organization.
+
+Adorno remains the guiding presence here -- although the F-Scale is . . . highly contested.
